--- a/Selfie/tsconfig.node.json
+++ b/Selfie/tsconfig.node.json
@@ -10,7 +10,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-
+    "allowJs": true,
     /* Linting */
     "strict": true,
     "noUnusedLocals": false,
