--- a/Selfie/package.json
+++ b/Selfie/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "marked": "^14.1.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "react": "^18.3.1",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
