--- a/Selfie/package.json
+++ b/Selfie/package.json
@@ -13,6 +13,9 @@
     "link-node-modules": "symlink-dir dist/node_modules dist/backend/node_modules"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
@@ -21,9 +24,11 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "marked": "^14.1.3",
+    "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
@@ -32,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
+    "@types/react-big-calendar": "^1.8.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
     "cpx": "^1.5.0",
