Note ultimate (manca collegamento con il calendario)

--- a/Selfie/.env
+++ b/Selfie/.env
@@ -1,6 +1,6 @@
 DB_USER=gianluca.sperti
 DB_PASSWORD=zeeN9eep
 DB_HOST=mongo_gianluca.sperti
-MONGO_URI= mongodb://localhost:27017/selfie
+MONGO_URI= mongodb+srv://gianlucaspertigs:giucagiucagiuca@giucacluster.ogopbjl.mongodb.net/
 GMAIL_USER=noreply.selfieapp@gmail.com
 GMAIL_PASS=imtd ouue zfvi hhhb
