--- a/Selfie/src/backend/package.json
+++ b/Selfie/src/backend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.7.1"
   }
 }
