--- a/Selfie/src/backend/package.json
+++ b/Selfie/src/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5"
   }
 }
